Aligned boards correctly

--- a/src/frontend/css/styles.css
+++ b/src/frontend/css/styles.css
@@ -267,16 +267,46 @@ table {
 .gameScreen {
     display: none;
 }
+.gameScreen {
+    display: none;
+    flex-grow: 1;
+}
+.gameMain {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    flex-grow: 1;
+}
 .leftBoards {
-    background:red;
+    /* background:red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .rightBoards {
-    background:blue;
+    /* background:blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.centeredContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .boardGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px; /* adjust this for space between grid items */
-    padding: 10px; /* adjust this for space around the whole grid */
+    width: 100%;
+}
+
+.activeBoard {
+    /* background:yellow; */
+}
+.board-small {
+    float: left;
+    margin: 10px;
 }
